vlib/v/parser/tests/main_and_script_err.out
vlib/v/parser/tests/main_and_script_err.vv:4:1: error: script mode can no longer define `main` function
    2 |     println('main')
    3 | }
    4 | println('out')
      | ~~~~~~~
